# stainwarpy

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yaml  publish.yaml
examples/: transform_segmentation_masks.ipynb
stainwarpy/: __init__.py  metrics.py  preprocess.py  reg.py  regPipeline.py  reg_cli.py
tests/: transform_segmentation_masks.ipynb
