[tool.poetry]
name = "stainwarpy"
version = "0.1.0"
description = "Tools for image registration between multiplexed and HnE stained tissue images"
authors = ["tckumaasekara"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "stainwarpy" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.2.6"
tifffile = "2025.5.10"
histomicstk = "1.4.0"
scikit-image = "0.25.2"
scipy = "1.16.3"
typer = { version = "0.20.0", extras = ["all"] }

[tool.poetry.scripts]
stainwarpy = "stainwarpy.reg_cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"